# pa-miri

./: .envrc  .gitignore  .gitmodules  .luarc.json  .ninja_log  .svlint.toml  Makefile  Makefile.in  README.md  build.lua  filelist_tb.f  flake.nix  gandul.surf.ron  harness.lua  pa_cpu_mini1.f  regression  run_regression.sh  rv_pa2.surf.ron  rv_pa3.surf.ron  set_env.sh  simple_processor.sv  simple_processor_tb.sv  stall_3e.patch
asm/: branch.asm  jajasalu2.asm
cores/pa_cpu_mini1/: filelist_rtl.f  filelist_tb.f
cosim/: Makefile  compile.sh  test.sh
cosim/c/: Makefile  compile_commands.json  cosim_dpi.c  cosim_dpi.cpp  cosim_dpi.h  cosim_dpi.hpp
cosim/cosim/: cosim.cpp  (+5 more)
fifo_uvm/: Makefile  fifo.sv  fifo_agent.svh  fifo_driver.svh  fifo_env.svh  fifo_if.sv  fifo_item.svh  fifo_monitor.svh  fifo_pkg.sv  fifo_scoreboard.svh  fifo_sequence.svh  fifo_sequencer.svh  fifo_test.svh  tb.sv
harness/: .gitignore  Cargo.toml  README.md
harness/lua/: harness_meta.lua
harness/src/: analysis.rs  cli.rs  core.rs  discovery.rs  hw.rs  lua_engine.rs  main.rs  ninja.rs  silo.rs  sim.rs  sw.rs
new-structure/: Makefile  Makefile.in  README.md
programs/: Makefile  all.s  bne_beq.s  build.py  crt.s  ld_st.s  link.ld  macros.inc  minimal.s  store_load.s
toolchains/: Dockerfile  all.s  bne_beq.s  link.ld  minimal.s  store_load.s
tools/: benchmarks  gentags  orchestrator  pack_for_submission  parse_filelist.py  regression  select_wave  view_konata
utils/: assembler.py  branch.hex  jajasalu2.asm  jajasalu2.hex  vsim.sh  vsim_compile.tcl  vsim_container.sh  vsim_run.tcl
(+305 files in other folders)
